--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,9 @@
 PORT=3000
 
-# https://dashboard.stripe.com/test/apikeys
 STRIPE_SECRET=
+
+STRIPE_SUCCESS_URL=http://localhost:3000/payments/success
+STRIPE_CANCEL_URL=http://localhost:3000/cancel/success
+
+# Webhook Signin secret 
+STRIPE_ENDPOINT_SECRET=
