[UPDATE] payments ms

--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,6 @@ STRIPE_CANCEL_URL=http://localhost:3000/cancel/success
 # Webhook Signing secret
 # https://dashboard.stripe.com/test/webhooks/we...
 STRIPE_ENDPOINT_SECRET=
+
+# NATS_SERVERS="nats://localhost:4222,nats://localhost:4222,nats://localhost:4222"
+NATS_SERVERS="nats://localhost:4222"
