--- a/package.json
+++ b/package.json
@@ -23,18 +23,19 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^10.3.8",
     "@nestjs/platform-express": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "joi": "^17.12.3",
+    "nats": "^2.22.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "stripe": "^15.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
-    "@nestjs/microservices": "^10.3.8",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
